legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr59827.c-5.4.0-2.out.txt
pr59827.c:5:10: error: array type has incomplete element type ‘int[]’
 foo (int p[2][])  
          ^
pr59827.c: In function ‘bar’:
pr59827.c:14:8: error: type of formal parameter 1 is incomplete
   foo (p);  
        ^
